--- a/Level1/Unit2/index.html
+++ b/Level1/Unit2/index.html
@@ -209,56 +209,59 @@
   </div>
 
   <script>
-    // Cria dinamicamente os botões de atividade, preservando level e unit
-    document.addEventListener("DOMContentLoaded", () => {
-      const pathParts = window.location.pathname.split("/");
-      const level = pathParts[1] || "Level1";
-      const unit = pathParts[2] || "Unit1";
+  // Cria dinamicamente os botões de atividade, incluindo TEST e ROBÔ LEX
+  document.addEventListener("DOMContentLoaded", () => {
+    const pathParts = window.location.pathname.split("/");
+    const level = pathParts[1] || "Level1";
+    const unit = pathParts[2] || "Unit1";
 
-      const buttonData = [
-        { trecho: "trecho1", img: "../../imagens/listening.png", alt: "Listening" },
-        { trecho: "trecho2", img: "../../imagens/grammar.png", alt: "Grammar" },
-        { trecho: "trecho3", img: "../../imagens/speaking.png", alt: "Speaking" },
-        { trecho: "trecho4", img: "../../imagens/writing.png", alt: "Writing" },
-        { trecho: "trecho5", img: "../../imagens/Bible.png", alt: "Bible" },
-        { trecho: "trecho6", img: "../../imagens/apresentacao.png", alt: "Apresentação" }
-      ];
+    const buttonData = [
+      { trecho: "trecho1", img: "../../imagens/listening.png", alt: "Listening" },
+      { trecho: "trecho2", img: "../../imagens/grammar.png", alt: "Grammar" },
+      { trecho: "trecho3", img: "../../imagens/speaking.png", alt: "Speaking" },
+      { trecho: "trecho4", img: "../../imagens/writing.png", alt: "Writing" },
+      { trecho: "trecho5", img: "../../imagens/Bible.png", alt: "Bible" },
+      { trecho: "trecho6", img: "../../imagens/apresentacao.png", alt: "Apresentação" }
+    ];
 
-      const container = document.getElementById("activity-buttons");
-buttonData.forEach(data => {
-  const a = document.createElement("a");
-  a.href = `/${level}/${unit}/fases.html?trecho=${data.trecho}`;
-  a.className = "activity-button";
+    const container = document.getElementById("activity-buttons");
 
-  const img = document.createElement("img");
-  img.src = data.img;
-  img.alt = data.alt;
+    // Botões normais
+    buttonData.forEach(data => {
+      const a = document.createElement("a");
+      a.href = `/${level}/${unit}/fases.html?trecho=${data.trecho}`;
+      a.className = "activity-button";
 
-  a.appendChild(img);
-  container.appendChild(a);
-});
+      const img = document.createElement("img");
+      img.src = data.img;
+      img.alt = data.alt;
 
-// Botão do TEST
-const testButton = document.createElement("a");
-testButton.href = `/${level}/${unit}/test.html`;
-testButton.className = "activity-button test-button";
-const testImg = document.createElement("img");
-testImg.src = "../../imagens/test.png";
-testImg.alt = "Test";
-testButton.appendChild(testImg);
-container.appendChild(testButton);
+      a.appendChild(img);
+      container.appendChild(a);
+    });
 
-// Botão do ROBÔ LEX
-const robotButton = document.createElement("a");
-robotButton.href = `../../Atividades/LEX/index.html?level=${level}&unit=${unit}`;
-robotButton.className = "activity-button robot-lex";
-robotButton.id = "robot-lex-link";
-const robotImg = document.createElement("img");
-robotImg.src = "../../imagens/botoes/lex_button.png";
-robotImg.alt = "Robot Lex";
-robotButton.appendChild(robotImg);
-container.appendChild(robotButton);
-  </script>
+    // Botão TEST
+    const testButton = document.createElement("a");
+    testButton.href = `/${level}/${unit}/test.html`;
+    testButton.className = "activity-button test-button";
+    const testImg = document.createElement("img");
+    testImg.src = "../../imagens/test.png";
+    testImg.alt = "Test";
+    testButton.appendChild(testImg);
+    container.appendChild(testButton);
+
+    // Botão ROBÔ LEX
+    const robotButton = document.createElement("a");
+    robotButton.href = `../../Atividades/LEX/index.html?level=${level}&unit=${unit}`;
+    robotButton.className = "activity-button robot-lex";
+    robotButton.id = "robot-lex-link";
+    const robotImg = document.createElement("img");
+    robotImg.src = "../../imagens/botoes/lex_button.png";
+    robotImg.alt = "Robot Lex";
+    robotButton.appendChild(robotImg);
+    container.appendChild(robotButton);
+  });
+</script>
 
   <script>
     // Verifica usuário no Firebase e exibe Teacher Resources se for professor
@@ -277,18 +280,6 @@ container.appendChild(robotButton);
         });
       } else {
         console.log("Nenhum usuário autenticado");
-      }
-    });
-
-    // Monta a URL do robô Lex com level e unit
-    document.addEventListener("DOMContentLoaded", () => {
-      const pathParts = window.location.pathname.split("/");
-      const level = pathParts[1] || "Level1";
-      const unit = pathParts[2] || "Unit1";
-      const robotUrl = `../../Atividades/LEX/index.html?level=${level}&unit=${unit}`;
-      const robotLexLink = document.getElementById("robot-lex-link");
-      if (robotLexLink) {
-        robotLexLink.href = robotUrl;
       }
     });
   </script>
