--- a/Level1/Unit2/index.html
+++ b/Level1/Unit2/index.html
@@ -221,7 +221,8 @@
       { trecho: "trecho3", img: "../../imagens/speaking.png", alt: "Speaking" },
       { trecho: "trecho4", img: "../../imagens/writing.png", alt: "Writing" },
       { trecho: "trecho5", img: "../../imagens/Bible.png", alt: "Bible" },
-      { trecho: "trecho6", img: "../../imagens/apresentacao.png", alt: "Apresentação" }
+      { trecho: "trecho6", img: "../../imagens/apresentacao.png", alt: "Apresentação" },
+      { trecho: "trechoteste", img: "../../imagens/test.png", alt: "Test", className: "test-button" }
     ];
 
     const container = document.getElementById("activity-buttons");
@@ -230,7 +231,7 @@
     buttonData.forEach(data => {
       const a = document.createElement("a");
       a.href = `/${level}/${unit}/fases.html?trecho=${data.trecho}`;
-      a.className = "activity-button";
+      a.className = "activity-button" + (data.className ? ` ${data.className}` : "");
 
       const img = document.createElement("img");
       img.src = data.img;
@@ -239,16 +240,6 @@
       a.appendChild(img);
       container.appendChild(a);
     });
-
-    // Botão TEST
-    const testButton = document.createElement("a");
-    testButton.href = `/${level}/${unit}/test.html`;
-    testButton.className = "activity-button test-button";
-    const testImg = document.createElement("img");
-    testImg.src = "../../imagens/test.png";
-    testImg.alt = "Test";
-    testButton.appendChild(testImg);
-    container.appendChild(testButton);
 
     // Botão ROBÔ LEX
     const robotButton = document.createElement("a");
