--- a/Level1/Unit1/teacher/index.html
+++ b/Level1/Unit1/teacher/index.html
@@ -298,11 +298,27 @@
          * Go back to the previous level
          */
         function goBackToLevel() {
-            const currentUrl = window.location.href;
-            // Removes "/teacher/index.html" and redirects to "/index.html"
-            const newUrl = currentUrl.replace("/teacher/index.html", "/index.html");
-            window.location.href = newUrl;
-        }
+    const currentUrl = window.location.href;
+    const url = new URL(currentUrl);
+
+    // Remove "teacher" do final da pathname
+    let pathParts = url.pathname.split('/');
+    
+    // Remove string vazia no final se a URL terminar com /
+    if (pathParts[pathParts.length - 1] === "") {
+        pathParts.pop();
+    }
+
+    if (pathParts[pathParts.length - 1] === "teacher") {
+        pathParts.pop(); // remove "teacher"
+    }
+
+    // Constrói a nova URL (sem "teacher")
+    const newPath = pathParts.join('/') + '/index.html';
+    const newUrl = `${url.origin}${newPath}`;
+
+    window.location.href = newUrl;
+}
 
         /**
          * Convert plain text to basic HTML formatting:
