--- a/Atividades/Grammar3/index.html
+++ b/Atividades/Grammar3/index.html
@@ -365,6 +365,11 @@
                         totalAnswers++;
                         console.log(`Incrementando totalAnswers: ${totalAnswers}`);
                     }
+else if (trimmedLine.startsWith('#IMG:')) {
+    const imageName = trimmedLine.replace('#IMG:', '').trim();
+    const imagePath = `../../${level}/${unit}/DataGrammar3/${imageName}`;
+    htmlContent += `<div class="image-container"><img src="${imagePath}" alt="Lesson Image" /></div>`;}
+
                     // Qualquer outra linha simples => pode ter **negrito**, *itálico* ou ***ambos***
                     else {
                         let formattedLine = trimmedLine
