--- a/Atividades/Grammar2/index.html
+++ b/Atividades/Grammar2/index.html
@@ -38,10 +38,7 @@
             background-color: #f0f0f0;
             box-shadow: 3px 3px 7px rgba(0, 0, 0, 0.2);
         }
-        .back-button {
-            position: absolute;
-            top: 20px;
-            left: 20px;
+        .back-button {            
             background-color: #007bff;
             color: white;
             padding: 10px 15px;
@@ -49,6 +46,7 @@
             text-decoration: none;
             font-size: 1rem;
             cursor: pointer;
+            margin-bottom: 15px;
         }
         .back-button:hover {
             background-color: #0056b3;
@@ -221,15 +219,17 @@
 </div>
 
 <div class="container">
-    <a href="javascript:history.back()" class="back-button">Back</a>
-    
-    <!-- Imagem agora aparece antes do título -->
+
+    <!-- BOTÃO BACK AJUSTADO (AGORA FIXO EM CIMA DA IMAGEM, SEM SOBREPOR) -->
+    <div style="margin-bottom: 15px;">
+        <a href="javascript:history.back()" class="back-button">Back</a>
+    </div>
+
+<h1 id="title"></h1>
+
     <div class="image-container">
         <img id="main-image" src="image.png" alt="Example Image">
     </div>
-
-    <!-- Título do texto.txt será injetado aqui com a classe .page-title -->
-    <h1 id="title">Loading title...</h1>
 
     <div class="button-container">
         <!-- Botões dos professores serão carregados aqui -->
@@ -365,6 +365,11 @@
                         totalAnswers++;
                         console.log(`Incrementando totalAnswers: ${totalAnswers}`);
                     }
+else if (trimmedLine.startsWith('#IMG:')) {
+    const imageName = trimmedLine.replace('#IMG:', '').trim();
+    const imagePath = `../../${level}/${unit}/DataGrammar2/${imageName}`;
+    htmlContent += `<div class="image-container"><img src="${imagePath}" alt="Lesson Image" /></div>`;}
+
                     // Qualquer outra linha simples => pode ter **negrito**, *itálico* ou ***ambos***
                     else {
                         let formattedLine = trimmedLine
