--- a/Level1/Unit3/DataGrammar3/aulas/aula5/index - Copy.html
+++ b/Level1/Unit3/DataGrammar3/aulas/aula5/index - Copy.html
@@ -97,12 +97,6 @@
             width: 100%;
             height: 2px;
         }
-        /* Imagens no conteúdo */
-        .content-wrapper img {
-            max-width: 100%;
-            display: block;
-            margin: 10px auto;
-        }
     </style>
 </head>
 <body>
@@ -183,18 +177,12 @@
                                 element = document.createElement('div');
                                 element.className = 'spacer';
                                 break;
-                            case 'image':
-                                // Exibe imagem referenciada em lesson.txt, buscando dois níveis acima
-                                element = document.createElement('img');
-                                element.src = '../../' + text.trim();
-                                element.alt = "Imagem da lição";
-                                break;
                             default:
                                 console.warn(`Tipo desconhecido: ${type}`);
                         }
 
                         if (element) {
-                            if (text && type !== 'spacer' && type !== 'image') {
+                            if (text && type !== 'spacer') {
                                 element.innerText = text.trim();
                             }
                             element.lang = lang || '';
@@ -202,7 +190,7 @@
                             contentDiv.appendChild(element);
 
                             // Apenas adiciona elementos legíveis à lista de textos
-                            if (type !== 'spacer' && type !== 'image') {
+                            if (type !== 'spacer') {
                                 texts.push({ id: element.dataset.index, lang, text: text ? text.trim() : '' });
 
                                 // Adiciona evento de clique para leitura manual
