--- a/Level1/Unit3/DataGrammar3/aulas/aula5/index.html
+++ b/Level1/Unit3/DataGrammar3/aulas/aula5/index.html
@@ -164,12 +164,33 @@
         let el;
 
         switch (type) {
-          case 'title': el = document.createElement('h1'); break;
-          case 'subtitle': el = document.createElement('h2'); break;
-          case 'text': el = document.createElement('p'); break;
-          case 'text-bold': el = document.createElement('p'); el.style.fontWeight = 'bold'; break;
-          case 'text-bold-large': el = document.createElement('p'); el.style.fontWeight = 'bold'; el.style.fontSize = '1.5em'; break;
-          case 'spacer': el = document.createElement('div'); el.className = 'spacer'; break;
+          case 'title':
+            el = document.createElement('h1');
+            el.textContent = text;
+            break;
+          case 'subtitle':
+            el = document.createElement('h2');
+            el.textContent = text;
+            break;
+          case 'text':
+            el = document.createElement('p');
+            el.textContent = text;
+            break;
+          case 'text-bold':
+            el = document.createElement('p');
+            el.style.fontWeight = 'bold';
+            el.textContent = text;
+            break;
+          case 'text-bold-large':
+            el = document.createElement('p');
+            el.style.fontWeight = 'bold';
+            el.style.fontSize = '1.5em';
+            el.textContent = text;
+            break;
+          case 'spacer':
+            el = document.createElement('div');
+            el.className = 'spacer';
+            break;
           case 'image':
             el = document.createElement('img');
             el.src = '../../' + text;
@@ -214,7 +235,7 @@
     function updateButton() {
       const btn = document.getElementById('toggleButton');
       const iconClass = isPlaying ? 'bi-pause-fill' : 'bi-play-fill';
-      btn.innerHTML = `<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"16\" height=\"16\" fill=\"currentColor\" class=\"bi ${iconClass}\" viewBox=\"0 0 16 16\"></svg> ${isPlaying ? 'Pause' : 'Start'} Lesson`;
+      btn.innerHTML = `<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi ${iconClass}" viewBox="0 0 16 16"></svg> ${isPlaying ? 'Pause' : 'Start'} Lesson`;
     }
 
     function speakText(idx) {
